--- a/package.json
+++ b/package.json
@@ -9,8 +9,8 @@
     "@fortawesome/free-regular-svg-icons": "^5.11.1",
     "@fortawesome/free-solid-svg-icons": "^5.13.0",
     "@fortawesome/react-fontawesome": "^0.1.9",
-    "@testing-library/jest-dom": "^4.2.4",
-    "@testing-library/react": "^9.5.0",
+    "@testing-library/jest-dom": "^5.16.1",
+    "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^7.2.1",
     "@tippyjs/react": "^4.2.5",
     "bootstrap": "^4.3.1",
@@ -21,17 +21,17 @@
     "react-router": "^5.1.2",
     "react-router-config": "^5.0.1",
     "react-router-dom": "^5.0.1",
-    "react-scripts": "3.4.1",
+    "react-scripts": "^5.0.0",
     "styled-components": "^5.3.0"
   },
   "devDependencies": {
-    "prop-types": "^15.7.2",
-    "reactstrap": "^8.4.1",
-    "eslint": "^6.5.1",
+    "eslint": "^8.8.0",
     "eslint-config-prettier": "^6.4.0",
     "eslint-plugin-prettier": "^3.1.1",
     "gh-pages": "^2.01",
-    "prettier": "^1.18.2"
+    "prettier": "^1.18.2",
+    "prop-types": "^15.7.2",
+    "reactstrap": "^8.4.1"
   },
   "scripts": {
     "start": "react-scripts start",
